<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fragment_horizontal_margin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="start"
        android:layout_marginTop="40dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/google_sans_regular"
        android:text="@string/register_title"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_message"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="10dp"
        android:paddingVertical="10dp"
        android:background="@drawable/edit_text"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/user_name"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:selectAllOnFocus="true" />

        <EditText
            android:id="@+id/user_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="10dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/login_user"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:selectAllOnFocus="true" />

    <EditText
        android:id="@+id/password_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:paddingVertical="10dp"
        android:background="@drawable/edit_text"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:fontFamily="@font/proxima_nova"
        android:hint="@string/login_password"
        android:textColorHint="@color/white"
        android:textColor="@color/white" />

        <EditText
            android:id="@+id/password_verification"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginHorizontal="20dp"
            android:paddingVertical="10dp"
            android:background="@drawable/edit_text"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:fontFamily="@font/proxima_nova"
            android:hint="@string/password_verification"
            android:textColorHint="@color/white"
            android:textColor="@color/white" />

    <Button
        android:id="@+id/button_register"
        android:background="@drawable/button_solid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="80dp"
        android:enabled="false"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/register"/>

    </LinearLayout>

</RelativeLayout>