<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20sp"
        android:background="@drawable/wallpaper_playstation"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/login_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="90dp"
                android:layout_marginTop="10dp"
                android:text="@string/login_message"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp"
                tools:ignore="TextSizeCheck" />

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/login_user"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:paddingVertical="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:autofillHints="username" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/login_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:paddingVertical="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:autofillHints="password" />
            <TextView
                android:id="@+id/temoi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:text="blibli"
                ></TextView>
            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_solid"
                android:fontFamily="@font/proxima_nova"
                android:text="@string/login_login"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/hallow_button"
                android:text="@string/action_sign_in"
                android:textAllCaps="false" />

        </LinearLayout>

        <Button
            android:id="@+id/button_forgotten_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginHorizontal="20dp"
            android:fontFamily="@font/proxima_nova"
            android:theme="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/forgotten_password_title"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

</FrameLayout>