<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/fragment_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/google_sans_regular"
                android:text="@string/register_title"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/register_message"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <EditText
                android:id="@+id/user_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/user_name"
                android:paddingVertical="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/user_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/login_user"
                android:inputType="textEmailAddress"
                android:paddingVertical="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/password_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <EditText
                android:id="@+id/password_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/edit_text"
                android:fontFamily="@font/proxima_nova"
                android:hint="@string/password_verification"
                android:inputType="textPassword"
                android:paddingVertical="10dp"
                android:selectAllOnFocus="true"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHint="@color/white" />

            <Button
                android:id="@+id/button_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="80dp"
                android:background="@drawable/button_solid"
                android:enabled="false"
                android:fontFamily="@font/proxima_nova"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>